# C-compiler-proj

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  README.txt  ast.cpp  build-leocc.sh  c_test_functions.c  codegen.cpp  codegen_llvm.cpp  cst.cpp  cst.hpp  docker-entrypoint.sh  ir.hpp  ir_generator.cpp  ir_generator.hpp  leocc  leocc.hpp  main.cpp  main.hpp  test.sh  test_functions.s  test_llvm.sh  tmp  tmp.s  tokenizer.cpp  wcet.cpp  wcet.hpp
.github/workflows/: ci.yml
